# zkSMT

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  real_proof.json  ss1_backend.did  test_real_proof.json
circuits/: basic_smt.circom  input.json  minimal_smt.circom  minimal_smt.r1cs  minimal_smt.sym  minimal_smt.wasm  minimal_smt_0000.zkey  minimal_smt_final.zkey  pot12_0001.ptau  proof.json  public.json  simple_smt.circom  simple_smt_membership.circom  smt_membership.circom  smt_membership_real.circom  zk_membership.circom  zk_membership.r1cs  zk_membership.sym  zk_membership.wasm  zk_membership_input.json  zk_membership_proof.json  zk_membership_public.json  zk_smt_membership.circom  zkproof.js
src/ss1_backend/: Cargo.toml  ss1_backend.did  zk_membership_vkey.json
src/ss1_backend/src/: lib.rs
src/ss1_frontend/: index.html  package.json  vite.config.js
src/ss1_frontend/public/: .ic-assets.json5  verification_key.json  zk_membership_final.zkey
src/ss1_frontend/src/: App.css  App.jsx  App.jsx.old  App.jsx.temp  main.jsx  realZkProof.js  vite-env.d.ts  wasmTest.js  zkproof.js
zk_smt/: Cargo.toml
zk_smt/src/: lib.rs
