[package]
name = "ss1_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
ark-bls12-381 = "0.4"
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-groth16 = "0.4"
ark-serialize = "0.4"
ark-snark = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
ark-crypto-primitives = "0.4"
zk_smt = { path = "../../zk_smt" }
ark-std = "0.4"
hex = "0.4"
